# CreditGuard

./: .env_sample  .pre-commit-config.yaml  README.md  databricks.yml  project_config.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
monitor/: Create Inference Data.ipynb  Lakehouse Monitor.ipynb  Refresh Monitor.ipynb  Send Request.ipynb
notebook/: AB_test_model_serving.ipynb  Create_Source_Data.ipynb  Data_Cleaning_Spark.ipynb  Data_Preprocessing_Spark.ipynb  Feature_MLflow.ipynb  Model_Serving.ipynb  clean.py
workflow/: deploy_model.py  evaluate_model.py  preprocess.py  refresh_monitor.py  train_model.py
